compiler/testData/asJava/lightClasses/compilationErrors/JvmPackageName.kt
// IGNORE_BACKEND: ANY
// a.b.c.JvmPackageNameKt
@file:JvmPackageName("a.b.c")
package p

fun f() {

}